--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				<article>
 					<h2>Loan and Credit Manager</h2>
 					<p class="subDetails">June 2012 - Present</p>
-					<p>I am the Loan and Credit Manager of Johnsons and The Young Shall Grow</p>
+					<p>Loan and Credit Manager of Johnsons and The Young Shall Grow</p>
 				</article>
 				
 			</div>
@@ -76,7 +76,7 @@
 			<div class="sectionContent">
 				<ul class="keySkills">
 					<li>Android Developent</li>
-					<li>Web Front End (HTML, CSS and JavaScript</li>
+					<li>Web Front End (HTML, CSS and JavaScript)</li>
 					<li>Android-Java</li>
 					<li>XML</li>
 					<li>Accounting</li>
