--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 				
 				<div class="sectionContent">
 					<ul class="keySkills">
-						<li><a href="https://play.google.com/store/apps/details?id=com.soyombo.soyinka.mobilehtmlviewer&hl=en" target="_blank">Mobile HTML Viewer (on Google Play Store)</a></li>
+						<li><a href="https://play.google.com/store/apps/details?id=com.soyombo.soyinka.mobilehtmlviewer&hl=en" target="_blank">Mobile HTML Viewer (published on Google Play Store)</a></li>
 						<li><a href="https://github.com/ShowYoungg/Baking_App" target="_blank">Baking App</a></li>
 						<li><a href="https://github.com/ShowYoungg/PopularMovieApp_2" target="_blank">Popular Movie App</a></li>
 						<li><a href="https://github.com/ShowYoungg/Quiz_App" target="_blank">Quiz App</a></li>
